feat: Add animations

--- a/main.scss
+++ b/main.scss
@@ -4,21 +4,21 @@ $secondFont: 'Roboto', sans-serif;
 
 .navigation {
     display: none;
-    animation-name: navigation-animation;
-    animation-duration: 3s;
-    animation-timing-function: ease;
-    animation-delay: 0s;
-    animation-iteration-count: infinite;
-    animation-direction: normal;
-    animation-iteration-count: 1;
-    }
-    @keyframes navigation-animation {
-    0%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 100;
-    }
+    // animation-name: navigation-animation;
+    // animation-duration: 3s;
+    // animation-timing-function: ease;
+    // animation-delay: 0s;
+    // animation-iteration-count: infinite;
+    // animation-direction: normal;
+    // animation-iteration-count: 1;
+    // }
+    // @keyframes navigation-animation {
+    // 0%{
+    //     opacity: 0;
+    // }
+    // 100%{
+    //     opacity: 100;
+    // }
 }
 
 .header {
@@ -113,26 +113,26 @@ $secondFont: 'Roboto', sans-serif;
         background-repeat: no-repeat;
         background-size: 70%;
         background-position: center bottom;
-        animation-name: logo-animation;
-        animation-delay: 60s;
-        animation-duration: 3s;
-        animation-timing-function: ease;
-        animation-delay: 0s;
-        animation-iteration-count: 1;
-        animation-direction: normal;
+        // animation-name: logo-animation;
+        // animation-delay: 60s;
+        // animation-duration: 3s;
+        // animation-timing-function: ease;
+        // animation-delay: 0s;
+        // animation-iteration-count: 1;
+        // animation-direction: normal;
         
-        @keyframes logo-animation {
-            0%{
-            opacity: 0;
-            -webkit-transform: scale3d(0.3, 0.3, 0.3);
-            transform: scale3d(0.3, 0.3, 0.3);
-            }
-            60%{
-            opacity: 1;
-            -webkit-transform: scale3d(1,1,1);
-            transform: scale3d(1,1,1);
-            }
-        }
+        // @keyframes logo-animation {
+        //     0%{
+        //     opacity: 0;
+        //     -webkit-transform: scale3d(0.3, 0.3, 0.3);
+        //     transform: scale3d(0.3, 0.3, 0.3);
+        //     }
+        //     60%{
+        //     opacity: 1;
+        //     -webkit-transform: scale3d(1,1,1);
+        //     transform: scale3d(1,1,1);
+        //     }
+        // }
     }
 
         &__text {
@@ -178,7 +178,7 @@ $secondFont: 'Roboto', sans-serif;
 
     &__text {
         padding: 20px;
-        height: 100vh;
+        // height: 100vh;
     }
     &__header {
         margin: 0;
@@ -255,28 +255,29 @@ $secondFont: 'Roboto', sans-serif;
         }
     &__icon {
         max-width: 180px;
-        animation-name: angry-animation;
-        animation-duration: 3s;
-        animation-timing-function: ease;
-        animation-delay: 0s;
-        animation-iteration-count: 1;
-        animation-direction: normal;
-        @keyframes angry-animation {
-            0%{
-              opacity: 0;
-              -webkit-transform: scale3d(0.3, 0.3, 0.3);
-              transform: scale3d(0.3, 0.3, 0.3);
-            }
-            60%{
-              opacity: 1;
-              -webkit-transform: scale3d(1,1,1);
-              transform: scale3d(1,1,1);
-            }
-          }
-    } 
+    //     animation-name: angry-animation;
+    //     animation-duration: 3s;
+    //     animation-timing-function: ease;
+    //     animation-delay: 0s;
+    //     animation-iteration-count: 1;
+    //     animation-direction: normal;
+    //     @keyframes angry-animation {
+    //         0%{
+    //           opacity: 0;
+    //           -webkit-transform: scale3d(0.3, 0.3, 0.3);
+    //           transform: scale3d(0.3, 0.3, 0.3);
+    //         }
+    //         60%{
+    //           opacity: 1;
+    //           -webkit-transform: scale3d(1,1,1);
+    //           transform: scale3d(1,1,1);
+    //         }
+    //       }
+    // } 
+}
 }
 
-.strengths{
+.strengths {
     background-image: url(images/strengthsBackground.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -329,26 +330,26 @@ $secondFont: 'Roboto', sans-serif;
         letter-spacing: 0.04em;
         line-height: 1.5em;
     } 
-    &__icon {
-        animation-name: angry-animation;
-        animation-duration: 3s;
-        animation-timing-function: ease;
-        animation-delay: 0s;
-        animation-iteration-count: 1;
-        animation-direction: normal;
-        @keyframes angry-animation {
-            0%{
-              opacity: 0;
-              -webkit-transform: scale3d(0.3, 0.3, 0.3);
-              transform: scale3d(0.3, 0.3, 0.3);
-            }
-            60%{
-              opacity: 1;
-              -webkit-transform: scale3d(1,1,1);
-              transform: scale3d(1,1,1);
-            }
-          }
-    }
+    // &__icon {
+        // animation-name: angry-animation;
+        // animation-duration: 3s;
+        // animation-timing-function: ease;
+        // animation-delay: 0s;
+        // animation-iteration-count: 1;
+        // animation-direction: normal;
+        // @keyframes angry-animation {
+        //     0%{
+        //       opacity: 0;
+        //       -webkit-transform: scale3d(0.3, 0.3, 0.3);
+        //       transform: scale3d(0.3, 0.3, 0.3);
+        //     }
+        //     60%{
+        //       opacity: 1;
+        //       -webkit-transform: scale3d(1,1,1);
+        //       transform: scale3d(1,1,1);
+        //     }
+        //   }
+    // }
     &__hand {
         max-width: 180px;
     }   
