--- a/responsive.css
+++ b/responsive.css
@@ -75,15 +75,15 @@
         left: 50%;
         bottom: 3px;
         margin-right: 0;
-        animation-name: scroll-animation;
+        /* animation-name: scroll-animation;
         animation-duration: 1s;
-        animation-iteration-count: infinite;
+        animation-iteration-count: infinite; */
     }
-
+/* 
     @keyframes scroll-animation {
         0%   { bottom: 5px;}
         100%  { bottom: 1px;}
-      }
+      } */
 
     .greeting__header::before {
         content: "";
@@ -94,13 +94,13 @@
         height: 69px;
         background-size: 100%;
         background-repeat: no-repeat;
-        animation-name: logo-animation;
+        /* animation-name: logo-animation;
         animation-duration: 3s;
         animation-timing-function: ease;
         animation-delay: 0s;
         animation-iteration-count: infinite;
         animation-direction: normal;
-        animation-iteration-count: 1;
+        animation-iteration-count: 1; */
     }  
 
     .greeting__header {
@@ -130,23 +130,23 @@
         left: 0;
         right: 0;
         top: 0;
-        animation-name: logo-animation;
+        /* animation-name: logo-animation;
         animation-duration: 3s;
         animation-timing-function: ease;
         animation-delay: 0s;
         animation-iteration-count: infinite;
         animation-direction: normal;
-        animation-iteration-count: 1;
+        animation-iteration-count: 1; */
     }
         
-        @keyframes logo-animation {
+        /* @keyframes logo-animation {
             0%{
                 opacity: 0;
             }
             100%{
                 opacity: 100;
             }
-        }
+        } */
 
     /* INTRODUCTION */
     .introduction__text {
@@ -154,6 +154,7 @@
         width: 1000px;
         margin: 0 auto;
         position: relative;
+        height: 100vh;
     }
 
     .introduction__header {
@@ -189,23 +190,23 @@
         background-repeat: no-repeat;
         right: 50px;
         bottom: 250px;
-        animation-name: logo-animation;
+        /* animation-name: logo-animation;
         animation-duration: 3s;
         animation-timing-function: ease;
         animation-delay: 0s;
         animation-iteration-count: infinite;
         animation-direction: normal;
-        animation-iteration-count: 1;
+        animation-iteration-count: 1; */
     }
         
-        @keyframes logo-animation {
+        /* @keyframes logo-animation {
             0%{
                 opacity: 0;
             }
             100%{
                 opacity: 100;
             }
-        }
+        } */
 
     /* FIELDS, STRENGTHS */
     .fields,
