--- a/main.css
+++ b/main.css
@@ -26,12 +26,6 @@
 }
 
 .navbar {
-  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0 0px 5px 0px rgba(0, 0, 0, 0.35);
-}
-
-.navbar {
   background: white;
   position: fixed;
   top: 0;
@@ -39,6 +33,9 @@
   z-index: 1000;
   max-width: 100vw;
   overflow: hidden;
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0 0px 5px 0px rgba(0, 0, 0, 0.35);
 }
 
 .navbar::after {
@@ -82,6 +79,7 @@
   background-size: cover;
   z-index: -100;
   padding-top: 0;
+  overflow: hidden;
 }
 
 .greeting::before {
@@ -121,6 +119,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -100;
+  overflow: hidden;
 }
 
 .introduction::before {
@@ -167,6 +166,7 @@
 .fields {
   position: relative;
   color: #f7f7f7;
+  overflow: hidden;
 }
 
 .fields::after {
@@ -233,6 +233,7 @@
   background-image: url(images/strengthsBackground.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  overflow: hidden;
 }
 
 .strengths__header {
@@ -292,6 +293,7 @@
 .contact {
   position: relative;
   color: #f7f7f7;
+  overflow: hidden;
 }
 
 .contact::after {
@@ -363,6 +365,7 @@
 
 .footer {
   background-color: #050505;
+  overflow: hidden;
 }
 
 .footer__content {
