--- a/main.css
+++ b/main.css
@@ -22,6 +22,7 @@
   font-family: schnebel-sans-me, sans-serif;
   text-align: justify;
   padding-top: 25px;
+  line-height: 1.5em;
 }
 
 .navbar {
@@ -29,6 +30,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  height: 44px;
   z-index: 1000;
   max-width: 100vw;
   overflow: hidden;
@@ -47,15 +49,16 @@
 }
 
 .navbar__logo {
-  width: 42px;
-  height: 30px;
+  width: auto;
+  height: 34px;
+  padding: 5px;
 }
 
 .navbar__phonePopup {
   position: absolute;
   width: 134px;
-  height: 39px;
-  right: -93px;
+  height: 40px;
+  right: -95px;
   top: 50%;
   bottom: 50%;
   margin-top: auto;
@@ -63,22 +66,34 @@
   background-image: url(images/phonenum.png);
   background-size: 100%;
   background-repeat: no-repeat;
+  transform: scale(1);
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.95);
+  }
+  70% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0.95);
+  }
 }
 
 .navbar__phonePopup:hover {
-  right: 0px;
+  right: -20px;
 }
 
 .greeting {
   position: relative;
-  min-height: calc(100vh - 46px);
-  padding-top: 55px;
+  min-height: calc(100vh - 44px);
+  padding-top: 44px;
   background-image: url(images/mountains.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -100;
-  padding-top: 0;
-  overflow: hidden;
 }
 
 .greeting::before {
@@ -90,7 +105,7 @@
   height: 100%;
   background-repeat: no-repeat;
   background-size: 70%;
-  background-position: center bottom;
+  background-position: center bottom 44px;
 }
 
 .greeting__text {
@@ -379,4 +394,6 @@
   color: #7d7d7d;
   font-family: "Roboto", sans-serif;
   margin: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
