--- a/main.scss
+++ b/main.scss
@@ -27,6 +27,7 @@ $secondFont: 'Roboto', sans-serif;
     font-family: $firstFont;
     text-align: justify;
     padding-top: 25px;
+    line-height: 1.5em;
 }
 
 .navbar {
@@ -34,6 +35,7 @@ $secondFont: 'Roboto', sans-serif;
     position: fixed;
     top: 0;
     width: 100%;
+    height: 44px;
     z-index: 1000;
     max-width: 100vw;
     overflow: hidden;
@@ -51,15 +53,16 @@ $secondFont: 'Roboto', sans-serif;
         }        
     
     &__logo {
-        width: 42px;
-        height: 30px;
+        width: auto;
+        height: 34px;
+        padding: 5px;
     }
 
     &__phonePopup {
         position: absolute;
         width: 134px;
-        height: 39px;
-        right: -93px;
+        height: 40px;
+        right: -95px;
         top: 50%; 
         bottom: 50%; 
         margin-top: auto; 
@@ -67,23 +70,37 @@ $secondFont: 'Roboto', sans-serif;
         background-image: url(images/phonenum.png);
         background-size: 100%;
         background-repeat: no-repeat;
+        transform: scale(1);
+	animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+	0% {
+		transform: scale(0.95);
+	}
+
+	70% {
+		transform: scale(1);
+	}
+
+	100% {
+		transform: scale(0.95);
+	}
     }
     
     &__phonePopup:hover {
-        right: 0px;
+        right: -20px;
     }
 }
 
 .greeting {
     position: relative;
-    min-height: calc(100vh - 46px);
-    padding-top: 55px;
+    min-height: calc(100vh - 44px);
+    padding-top: 44px;
     background-image: url(images/mountains.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    z-index: -100;  
-    padding-top: 0;  
-    overflow: hidden;
+    z-index: -100;   
 
     &::before {
         content: "";
@@ -94,8 +111,7 @@ $secondFont: 'Roboto', sans-serif;
         height: 100%;
         background-repeat: no-repeat;
         background-size: 70%;
-        background-position: center bottom;
-        // data-aos="fade-up";
+        background-position: center bottom 44px;
     }
 
         &__text {
@@ -358,5 +374,7 @@ $secondFont: 'Roboto', sans-serif;
             color: #7d7d7d;
             font-family: $secondFont;
             margin: 0;
+            padding-top: 10px;
+            padding-bottom: 10px;
         }
 }
