--- a/main.css
+++ b/main.css
@@ -142,17 +142,33 @@
   z-index: -1;
   width: 100%;
   height: 100%;
+  max-height: 250px;
   background-repeat: no-repeat;
-  background-size: 60%;
+  background-size: contain;
   opacity: 90%;
-  background-position: center top 105px;
+  background-position: center;
   left: 0;
   right: 0;
-  top: 0;
+  top: 105px;
 }
 
 .introduction__text {
-  padding: 20px;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 55px;
+}
+
+.introduction__paragraph::after {
+  content: "";
+  position: absolute;
+  top: 355px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 300px;
+  border-top: 2px solid #3c9283;
 }
 
 .introduction__header {
@@ -161,7 +177,7 @@
 
 .introduction__paragraph {
   margin: 0;
-  padding-top: 330px;
+  padding-top: 350px;
   font-size: 1em;
 }
 
@@ -294,7 +310,9 @@
 .strengths__paragraph {
   font-family: "Roboto", sans-serif;
   margin: 0;
-  padding: 1.5em;
+  padding-top: 1.5em;
+  padding-right: 1.5em;
+  padding-left: 1.5em;
   letter-spacing: 0.04em;
   line-height: 1.5em;
 }
@@ -321,6 +339,16 @@
   width: 100%;
   min-height: 100vh;
   z-index: -1;
+}
+
+.contact__point {
+  width: 37px;
+  height: auto;
+}
+
+.contact__envelope, .contact__phone {
+  width: 47px;
+  height: auto;
 }
 
 .contact__content {
@@ -376,9 +404,14 @@
   color: #b3b3b3;
 }
 
+.contact a:hover {
+  text-decoration: underline;
+}
+
 .footer {
   background-color: #050505;
   overflow: hidden;
+  font-size: 0.8em;
 }
 
 .footer__content {
