--- a/main.scss
+++ b/main.scss
@@ -100,7 +100,7 @@ $secondFont: 'Roboto', sans-serif;
     background-image: url(images/mountains.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    z-index: -100;   
+    z-index: -100;
 
     &::before {
         content: "";
@@ -145,32 +145,52 @@ $secondFont: 'Roboto', sans-serif;
         z-index: -1;
         width: 100%;
         height: 100%;
+        max-height: 250px;
         background-repeat: no-repeat;
-        background-size: 60%;
+        background-size: contain;
         opacity: 90%;
-        background-position: center top 105px;
+        background-position: center;
         left: 0;
         right: 0;
-        top: 0;
+        top: 105px;
     }
 
     &__text {
-        padding: 20px;
+        padding-top: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 55px;
     }
+
+    &__paragraph::after {
+        content: "";
+        position: absolute;
+        top: 355px;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+        width: 300px;
+        border-top: 2px solid #3c9283;
+    }
+
     &__header {
         margin: 0;
     }
+
     &__paragraph {
         margin: 0;        
-        padding-top: 330px;
+        padding-top: 350px;
         font-size: 1em;
     }
+
     &__readMore {
         text-align: right;
         width: auto;
         font-family: $firstFont;
         padding: 5px;
     } 
+
     &__image {
         display: none;
     }
@@ -286,7 +306,9 @@ $secondFont: 'Roboto', sans-serif;
     &__paragraph {
         font-family: $secondFont;
         margin: 0;
-        padding: 1.5em;
+        padding-top: 1.5em;
+        padding-right: 1.5em;
+        padding-left: 1.5em;
         letter-spacing: 0.04em;
         line-height: 1.5em;
     }
@@ -313,6 +335,15 @@ $secondFont: 'Roboto', sans-serif;
         min-height: 100vh;
         z-index: -1;
     }
+        &__point{
+            width: 37px;
+            height: auto;
+        }
+        &__envelope,
+        &__phone {
+            width: 47px;
+            height: auto;
+        }
         &__content {
             margin: 0;
             padding-left: 0;
@@ -357,11 +388,15 @@ $secondFont: 'Roboto', sans-serif;
             text-decoration: none;
             color: #b3b3b3;
         }
+        a:hover {
+            text-decoration: underline;
+        }
 }
 
 .footer {
     background-color: #050505;
     overflow: hidden;
+    font-size: 0.8em;
         &__content {
             width: 100%;
             padding: 10px 0;
