--- a/responsive.css
+++ b/responsive.css
@@ -1,5 +1,6 @@
 @media screen and (min-width: 1680px)  {
     /* NAVIGATION */
+
     .navigation {
         display: block;
         position: absolute;
@@ -9,6 +10,10 @@
         margin-bottom: auto;
         left: -350px;
         padding-left: 50px;
+    }
+    
+    .greeting__nav {
+        top: 30%;
     }
 }
 
@@ -137,8 +142,8 @@
         box-sizing: border-box;
     }
     
-    .introduction__image::after {
-        /* picture of court */
+    /* .introduction__image::after {
+        picture of court
         content: "";
         position: absolute;
         background-image: url(images/court.jpg);
@@ -148,7 +153,7 @@
         background-position: center bottom 0;
         right: 10px;
         top: 420px;
-    }
+    } */
 
     /* FIELDS, STRENGTHS */
     .fields,
