--- a/main.scss
+++ b/main.scss
@@ -71,7 +71,7 @@ $secondFont: 'Roboto', sans-serif;
         background-size: 100%;
         background-repeat: no-repeat;
         transform: scale(1);
-	animation: pulse 2s infinite;
+	    animation: pulse 2s infinite;
 }
 
 @keyframes pulse {
@@ -114,7 +114,7 @@ $secondFont: 'Roboto', sans-serif;
         background-position: center bottom 44px;
     }
 
-        &__text {
+        &__container {
             padding: 40px 20px 40px 20px;
         }
         &__header {
@@ -132,7 +132,7 @@ $secondFont: 'Roboto', sans-serif;
 .introduction {
     min-height: 100vh;
     position: relative;
-    background-image: url(images/aboutMeBackground.png);
+    background-image: url(images/aboutMeBackground.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     z-index: -100;
@@ -155,7 +155,7 @@ $secondFont: 'Roboto', sans-serif;
         top: 105px;
     }
 
-    &__text {
+    &__container {
         padding-top: 20px;
         padding-left: 20px;
         padding-right: 20px;
@@ -181,7 +181,7 @@ $secondFont: 'Roboto', sans-serif;
     &__paragraph {
         margin: 0;        
         padding-top: 350px;
-        font-size: 1em;
+        // font-size: 1em;
     }
 
     &__readMore {
@@ -209,7 +209,7 @@ $secondFont: 'Roboto', sans-serif;
         display: block;
         background-size: cover;
         background-repeat: no-repeat;
-        background-image: url(images/fieldsBackground.png);
+        background-image: url(images/fieldsBackground.jpg);
         width: 100%; 
         min-height: 100vh;
         z-index: -1;
@@ -330,7 +330,7 @@ $secondFont: 'Roboto', sans-serif;
         display: block;
         background-size: cover;
         background-repeat: no-repeat;
-        background-image: url(images/contactBackground.png);
+        background-image: url(images/contactBackground.jpg);
         width: 100%; 
         min-height: 100vh;
         z-index: -1;
@@ -366,7 +366,7 @@ $secondFont: 'Roboto', sans-serif;
             color: #b3b3b3;
             letter-spacing: 0.04em;
             line-height: 1.5em;
-            font-size: 1em;
+            // font-size: 1em;
         }
         &__paragraph {
             font-family: $secondFont;
@@ -397,7 +397,7 @@ $secondFont: 'Roboto', sans-serif;
     background-color: #050505;
     overflow: hidden;
     font-size: 0.8em;
-        &__content {
+        &__container {
             width: 100%;
             padding: 10px 0;
             position: relative;
